<resources>
    <string name="app_name">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Яна Лев</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_text_acc">Аккаунт</string>
    <string name="settings_default_number">+791111111111</string>
    <string name="settings_label_phone_number">Нажмите что бы изменить номер телефона</string>
    <string name="default_login">yanalev</string>
    <string name="settings_label_name">Имя пользователя</string>
    <string name="settings_bio_label">О себе</string>
    <string name="settings_bio_text_label">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">TODO</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">- - - - - - - - -</string>
    <string name="string_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">Ваше имя пользвателя</string>
    <string name="settings_input_bio">О себе</string>
</resources>