<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.register.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_16dp"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="@+id/register_text_enter_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_register_image" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/normal_text_16sp"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:layout_margin="@dimen/app_small_margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register_text_enter_code"/>

    <TextView
        android:id="@+id/register_text_we_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/smallText"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"
        android:layout_margin="@dimen/app_small_margin_10dp"
        android:text="@string/register_text_we_sent"/>

    <EditText
        style="@style/editText"
        android:layout_width="wrap_content"
        android:id="@+id/register_input_code"
        android:autofillHints=""
        android:maxLength="6"
        android:gravity="center"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/register_hint_default_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_we_sent" />



</androidx.constraintlayout.widget.ConstraintLayout>